--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
     "next": "9.5.5",
     "react": "17.0.0",
     "react-dom": "17.0.0"
+  },
+  "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^3.0.0",
+    "postcss-preset-env": "^6.7.0",
+    "tailwindcss": "^1.9.5"
   }
 }
