--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "next": "9.5.5",
     "react": "17.0.0",
-    "react-dom": "17.0.0"
+    "react-dom": "17.0.0",
+    "swr": "^0.3.6"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^3.0.0",
