--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "next": "9.5.5",
     "react": "17.0.0",
     "react-dom": "17.0.0",
-    "swr": "^0.3.6"
+    "swr": "^0.3.6",
+    "unsplash-js": "^6.3.0"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^3.0.0",
