--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "9.5.5",
-    "react": "17.0.0",
-    "react-dom": "17.0.0",
-    "swr": "^0.3.6",
-    "unsplash-js": "^6.3.0"
+    "framer-motion": "^3.7.0",
+    "next": "10.0.7",
+    "next-themes": "^0.0.12",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "swr": "^0.4.2"
   },
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^3.0.0",
-    "postcss-preset-env": "^6.7.0",
-    "tailwindcss": "^1.9.5"
+    "autoprefixer": "^10.2.4",
+    "postcss": "^8.2.6",
+    "tailwindcss": "^2.0.3"
   }
 }
