--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "framer-motion": "^4.1.17",
-    "next": "11.0.1",
+    "next": "^12.3.1",
     "next-themes": "^0.0.15",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -18,6 +18,6 @@
   "devDependencies": {
     "autoprefixer": "^10.3.1",
     "postcss": "^8.3.5",
-    "tailwindcss": "^2.2.4"
+    "tailwindcss": "^3.1.8"
   }
 }
